// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarClockIcon when asked to render renders 1`] = `
<svg
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M21 7.5V6a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h3.5"
  />
  <path
    d="M16 2v4"
  />
  <path
    d="M8 2v4"
  />
  <path
    d="M3 10h5"
  />
  <path
    d="M17.5 17.5 16 16.25V14"
  />
  <path
    d="M22 16a6 6 0 1 1-12 0 6 6 0 0 1 12 0Z"
  />
</svg>
`;

exports[`CalendarClockIcon when asked to render with additional class renders with additional class 1`] = `
<svg
  className="some-class"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M21 7.5V6a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h3.5"
  />
  <path
    d="M16 2v4"
  />
  <path
    d="M8 2v4"
  />
  <path
    d="M3 10h5"
  />
  <path
    d="M17.5 17.5 16 16.25V14"
  />
  <path
    d="M22 16a6 6 0 1 1-12 0 6 6 0 0 1 12 0Z"
  />
</svg>
`;
